datasets Centro, Aganzuela, Retiro

--- a/Notebooks/yelp.ipynb
+++ b/Notebooks/yelp.ipynb
@@ -66,17 +66,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lient_id = \"xloJPd8uu_wT5OA7iEGqfg\"\n",
-    "api_key= \"Q1QkFZJjdwCzYsP8JQP52gl7M-DRn1KRgVU6Fu26dHk-v8mg_jw5_ID9VDPpu7UdPhrI8RIDKFsnDq-3kZJEwi4P8KY4oTha6ibEp9_s7ODRPz50KbsFqBVzhNxlZHYx\""
+    "client_id =\"5v5CeE42PBFGr0l-fmuClA\"# \"ahIDMsj-IWyPblkR9XD1-g\"#\n",
+    "api_key= \"XebaNhK8qbRRa1niztr2koMMLhg4Grek0Sx_jWnayqptZK3ZTYaxfxgl0NxQmgqINpBkZM5ERXel_Wc5M6sFBIJsfpw4NfNu_2s9SrIRZucKZfkUoWqK8n-tMZtkZHYx\"#\"yrmL8wasIICGpCJdKM8NgFOGpvNjj7onUofJgZqxpZ9BpqU7leefJqUCtwvbD8ieBSOM1IY1WGOSpMOup7Fo1VmnUJts1ASO-ri2WBvBpW3RCCYLKCOYZjxOldxlZHYx\"#"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 246,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client_id = \"BHE-irtrjFjW_Jzmg8ZRbg\"\n",
+    "api_key= \"o9lqLRnuXTpzvksmvTFqHWsXRXvZokt-6iM3Gc7Ki25elJi5vDQpvSaUR_gj1-HpDTRqoNNM-RuU-TBshDnqY32U_d3cfcsqYukCg3UzqOapkG9PZypEcvsd7g9mZHYx\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
@@ -97,13 +107,13 @@
        "\"\\nAída - 1,2,3 - 'Centro', 'Arganzuela', 'Retiro'\\nCarlos - 4,5,6 - 'Salamanca', 'Chamartín', 'Tetuán'\\nMarina - 7,8,9 - 'Chamberí', 'Fuencarral-El Pardo', 'Moncloa-Aravaca'\\nFernando - 10,11,12 - 'Latina', 'Carabanchel', 'Usera'\\nVíctor - 13,14,15 - 'Puente de Vallecas', 'Moratalaz', 'Ciudad Lineal'\\nRichi - 16,17,18 -  'Hortaleza', 'Villaverde', 'Villa de Vallecas'\\nÁlvaro - 19,20,21 - 'Vicálvaro', 'San Blas-Canillejas', 'Barajas'\\n\\n\""
       ]
      },
-     "execution_count": 3,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "distritos = ['Salamanca', 'Chamartín', 'Tetuán']#, 'Salamanca', 'Chamartín', 'Tetuán', 'Chamberí', 'Fuencarral-El Pardo', 'Moncloa-Aravaca', 'Latina', 'Carabanchel', 'Usera', 'Puente de Vallecas', 'Moratalaz', 'Ciudad Lineal', 'Hortaleza', 'Villaverde', 'Villa de Vallecas', 'Vicálvaro', 'San Blas-Canillejas', 'Barajas']\n",
+    "#distritos = ['Centro', 'Arganzuela', 'Retiro', 'Salamanca', 'Chamartín', 'Tetuán', 'Chamberí', 'Fuencarral-El Pardo', 'Moncloa-Aravaca', 'Latina', 'Carabanchel', 'Usera', 'Puente de Vallecas', 'Moratalaz', 'Ciudad Lineal', 'Hortaleza', 'Villaverde', 'Villa de Vallecas', 'Vicálvaro', 'San Blas-Canillejas', 'Barajas']\n",
     "\"\"\"\n",
     "Aída - 1,2,3 - 'Centro', 'Arganzuela', 'Retiro'\n",
     "Carlos - 4,5,6 - 'Salamanca', 'Chamartín', 'Tetuán'\n",
@@ -118,32 +128,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 233,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "distritos = [\n",
+    "    {\"district\": \"Centro\", \"latitude\": 40.415363, \"longitude\": -3.707398},\n",
+    "    {\"district\": \"Arganzuela\", \"latitude\": 40.398068, \"longitude\": -3.693734},\n",
+    "    {\"district\": \"Retiro\", \"latitude\": 40.411894, \"longitude\": -3.676574},\n",
+    "    {\"district\": \"Salamanca\", \"latitude\": 40.427919, \"longitude\": -3.680877},\n",
+    "    {\"district\": \"Chamartín\", \"latitude\": 40.462428, \"longitude\": -3.676057},\n",
+    "    {\"district\": \"Tetuán\", \"latitude\": 40.466676, \"longitude\": -3.698984},\n",
+    "    {\"district\": \"Chamberí\", \"latitude\": 40.436247, \"longitude\": -3.703830},\n",
+    "    {\"district\": \"Fuencarral-El Pardo\", \"latitude\": 40.515923, \"longitude\": -3.785586},\n",
+    "    {\"district\": \"Moncloa-Aravaca\", \"latitude\": 40.439883, \"longitude\": -3.744509},\n",
+    "    {\"district\": \"Latina\", \"latitude\": 40.388981, \"longitude\": -3.753525},\n",
+    "    {\"district\": \"Carabanchel\", \"latitude\": 40.377818, \"longitude\": -3.751209},\n",
+    "    {\"district\": \"Usera\", \"latitude\": 40.383553, \"longitude\": -3.706070},\n",
+    "    {\"district\": \"Puente de Vallecas\", \"latitude\": 40.389491, \"longitude\": -3.669062},\n",
+    "    {\"district\": \"Moratalaz\", \"latitude\": 40.407251, \"longitude\": -3.644992},\n",
+    "    {\"district\": \"Ciudad Lineal\", \"latitude\": 40.448431, \"longitude\": -3.650495},\n",
+    "    {\"district\": \"Hortaleza\", \"latitude\": 40.474457, \"longitude\": -3.640892},\n",
+    "    {\"district\": \"Villaverde\", \"latitude\": 40.345610, \"longitude\": -3.695956},\n",
+    "    {\"district\": \"Villa de Vallecas\", \"latitude\": 40.367040, \"longitude\": -3.612046},\n",
+    "    {\"district\": \"Vicálvaro\", \"latitude\": 40.396584, \"longitude\": -3.576622},\n",
+    "    {\"district\": \"San Blas-Canillejas\", \"latitude\": 40.428918, \"longitude\": -3.609064},\n",
+    "    {\"district\": \"Barajas\", \"latitude\": 40.477628, \"longitude\": -3.579394}\n",
+    "]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 271,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'district': 'Centro', 'latitude': 40.415363, 'longitude': -3.707398},\n",
+       " {'district': 'Arganzuela', 'latitude': 40.398068, 'longitude': -3.693734},\n",
+       " {'district': 'Retiro', 'latitude': 40.411894, 'longitude': -3.676574}]"
+      ]
+     },
+     "execution_count": 271,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "distritos[:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 272,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "url = 'https://api.yelp.com/v3/businesses/search'\n",
     "params = {    \n",
-    "    'categories': 'restaurants',\n",
-    "    'limit': 2  # Number of results to retrieve (max is 50)\n",
-    "}\n",
+    "        \n",
+    "        'categories': 'restaurants',\n",
+    "        \"radius\": 5000,\n",
+    "        'limit': 50  # Number of results to retrieve (max is 50)\n",
+    "    }\n",
     "headers = {\n",
     "    'Authorization': 'Bearer ' + api_key\n",
     "}\n",
-    "latitude_value= 40.411390924552144\n",
-    "longitude_value= -3.6643494118331197\n",
-    "radius_value= 100\n",
-    "\n",
     "res = []\n",
-    "for dis in distritos:\n",
-    "    #params[\"location\"] = dis + \",Madrid\"\n",
+    "for dis in distritos[:3]:  \n",
     "    params = {    \n",
-    "    \"latitude\": latitude_value,  # Latitud de la ubicación deseada\n",
-    "    \"longitude\": longitude_value,  # Longitud de la ubicación deseada\n",
-    "    \"radius\": radius_value,  # Radio en metros para buscar restaurantes alrededor de la ubicación\n",
-    "    'categories': 'restaurants',\n",
-    "    'limit': 2  # Number of results to retrieve (max is 50)\n",
+    "        \"latitude\": dis[\"latitude\"],\n",
+    "        \"longitude\": dis[\"longitude\"]        \n",
     "    }\n",
     "\n",
     "    # Send GET request to the API\n",
@@ -152,7 +209,8 @@
     "        try:\n",
     "            # Parse the JSON response\n",
     "            data = response.json()\n",
-    "               # Extract and process restaurants\n",
+    "           \n",
+    "            # Extract and process restaurants\n",
     "            restaurants = data['businesses']           \n",
     "            \n",
     "            for restaurant in restaurants:\n",
@@ -303,150 +361,45 @@
     "        except json.JSONDecodeError:\n",
     "            print(\"La respuesta no es un JSON válido\")\n",
     "\n",
-    "dfDistritoX = pd.DataFrame(res)\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfDistritoX = pd.DataFrame(res)\n"
+    "dfDistritoX = pd.DataFrame(res)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>rating</th>\n",
-       "      <th>address</th>\n",
-       "      <th>description</th>\n",
-       "      <th>review</th>\n",
-       "      <th>alias</th>\n",
-       "      <th>image_url</th>\n",
-       "      <th>is_closed</th>\n",
-       "      <th>review_count</th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>...</th>\n",
-       "      <th>price</th>\n",
-       "      <th>hours</th>\n",
-       "      <th>transactions</th>\n",
-       "      <th>languages</th>\n",
-       "      <th>attributes</th>\n",
-       "      <th>transit</th>\n",
-       "      <th>best_time</th>\n",
-       "      <th>delivery</th>\n",
-       "      <th>pickup</th>\n",
-       "      <th>online_ordering</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Norba</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>Calle Sirio, 26, 28007 Madrid, Spain</td>\n",
-       "      <td>Spanish Wine Bars</td>\n",
-       "      <td></td>\n",
-       "      <td>norba-madrid</td>\n",
-       "      <td>https://s3-media1.fl.yelpcdn.com/bphoto/gLxaRr...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>1</td>\n",
-       "      <td>40.412098</td>\n",
-       "      <td>...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1 rows × 23 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    name  rating                               address         description  \\\n",
-       "0  Norba     4.0  Calle Sirio, 26, 28007 Madrid, Spain  Spanish Wine Bars    \n",
-       "\n",
-       "  review         alias                                          image_url  \\\n",
-       "0         norba-madrid  https://s3-media1.fl.yelpcdn.com/bphoto/gLxaRr...   \n",
-       "\n",
-       "   is_closed  review_count   latitude  ...  price hours transactions  \\\n",
-       "0      False             1  40.412098  ...   None  None           []   \n",
-       "\n",
-       "  languages attributes transit best_time delivery pickup online_ordering  \n",
-       "0      None       None    None      None     None   None            None  \n",
-       "\n",
-       "[1 rows x 23 columns]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dfDistritoX.head()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    40.412098\n",
-       "Name: latitude, dtype: float64"
+       "(20, 23)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 273,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dfDistritoX.latitude"
+    "dfDistritoX.shape\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfDistritoX.to_csv(\"../data/distritoX.csv\")"
+    "dfDistritoX.to_csv(\"../data/distrito1.csv\")"
    ]
   }
  ],
@@ -466,7 +419,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.2"
   },
   "orig_nbformat": 4
  },
