borradas claves CSV

--- a/Notebooks/elaniquilador6001.ipynb
+++ b/Notebooks/elaniquilador6001.ipynb
@@ -44,8 +44,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client_id = \"LxLcEIvGdmb0QKa2kzVOoQ\"\n",
-    "api_key= \"ruFUIHCZ8dsmbozbfoXT6uNvymSk1_p8dbs1mNlrollqWDMdzWHj6o1kAe_uSatGFlrlx9EbB9BcjFNtMyqDm1jJM0rfM-FIw8v7rkrvTaI0k51G8uWmmrUL4tllZHYx\""
+    "client_id = \"xxxxxxxxxxxxxxxx\"\n",
+    "api_key= \"xxxxxxxxxxxxxxxxxxxxxx\""
    ]
   },
   {
