--- a/Notebooks/knn.ipynb
+++ b/Notebooks/knn.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Librerias #"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,8 +26,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Revision de información ##"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +235,7 @@
        "4  +34 914 68 46 82    €€  Arganzuela  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,8 +245,33 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# KNN y funciones de filtrado #\n",
+    "- El algoritmo Ball Tree es un método utilizado en el campo del aprendizaje automático y la búsqueda de vecinos más cercanos (k-nearest neighbors) para acelerar el cálculo de distancias entre puntos en espacios de alta dimensionalidad. El objetivo del algoritmo es construir una estructura de datos eficiente llamada Ball Tree que permite realizar consultas rápidas de vecinos más cercanos."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Otras consideraciones ###\n",
+    "\n",
+    "- Construcción del árbol: El proceso comienza seleccionando un punto cualquiera del conjunto de datos como \"nodo raíz\". Luego, se elige un punto central y se construyen dos subconjuntos de datos: uno que contiene puntos dentro de un radio específico (llamado \"bola interior\") y otro que contiene puntos fuera de ese radio (llamado \"bola exterior\"). Estos subconjuntos se convierten en los nodos hijos del nodo raíz. Este proceso se repite recursivamente para construir el árbol de forma jerárquica.\n",
+    "\n",
+    "- Selección del punto central: Para construir los subconjuntos, se debe seleccionar un punto central. Una opción común es elegir el punto que maximice la distancia media a todos los demás puntos dentro de la bola exterior.\n",
+    "\n",
+    "- División del espacio: Después de seleccionar el punto central, los puntos se asignan al subconjunto de la bola interior o la bola exterior según su distancia al punto central. La estructura del árbol se divide recursivamente en estos subconjuntos hasta que se cumpla algún criterio de terminación, como un número mínimo de puntos en cada nodo o un nivel máximo de profundidad.\n",
+    "\n",
+    "- Búsqueda de vecinos más cercanos: Una vez que se ha construido el árbol, se puede utilizar para realizar consultas eficientes de vecinos más cercanos. Dado un punto de consulta, el algoritmo comienza en la raíz del árbol y examina recursivamente los nodos y subárboles según la distancia entre el punto de consulta y los puntos centrales de los nodos. Esto permite descartar rápidamente las regiones del árbol que no contienen vecinos más cercanos y enfocarse en las regiones relevantes."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -262,39 +303,39 @@
     "\n",
     "\n",
     "def get_nearest_restaurants(user_latitude, user_longitude, k):\n",
-    "    # Create a KNN model\n",
+    "    #Creacion de modelo KNN\n",
     "    knn = NearestNeighbors(n_neighbors=k, algorithm='ball_tree')\n",
     "    \n",
-    "    # Fit the model using restaurant coordinates\n",
+    "    #\n",
     "    restaurant_coordinates = restaurants_df[['latitude', 'longitude']]\n",
     "    knn.fit(restaurant_coordinates)\n",
     "    \n",
-    "    # Find the indices of the nearest restaurants to the user's location\n",
+    "    #Encuentra los indices de los restaurantes mas cercanos al usuario\n",
     "    _, indices = knn.kneighbors([[user_latitude, user_longitude]])\n",
     "    \n",
-    "    # Retrieve the nearest restaurants from the dataset\n",
+    "    #extrae los restaurantes mas cercanos del dataset\n",
     "    nearest_restaurants = restaurants_df.iloc[indices[0]]\n",
     "    \n",
     "    return nearest_restaurants\n",
     "\n",
     "def calculate_distance(lat1, lon1, lat2, lon2):\n",
-    "    # Convert latitude and longitude from degrees to radians\n",
+    "    #Convierte las coordenadas a radianes\n",
     "    lat1, lon1, lat2, lon2 = map(radians, [lat1, lon1, lat2, lon2])\n",
     "\n",
-    "    # Haversine formula to calculate distance\n",
+    "    #Formula haversine\n",
     "    dlat = lat2 - lat1\n",
     "    dlon = lon2 - lon1\n",
     "    a = sin(dlat / 2) ** 2 + cos(lat1) * cos(lat2) * sin(dlon / 2) ** 2\n",
     "    c = 2 * atan2(sqrt(a), sqrt(1 - a))\n",
-    "    distance = 6371 * c  # Earth radius in kilometers\n",
+    "    distance = 6371 * c  #Radio en kilometros\n",
     "\n",
     "    return distance\n",
     "\n",
     "def filter_restaurants(user_latitude, user_longitude, radius, k):\n",
-    "    # Get the nearest restaurants using KNN\n",
+    "    #Obten el restaurante mas cercano al usuario\n",
     "    nearest_restaurants = get_nearest_restaurants(user_latitude, user_longitude, k)\n",
     "    \n",
-    "    # Filter the nearest restaurants based on the specified radius\n",
+    "    #Filtrar los restaurantes que esten dentro del radio\n",
     "    filtered_restaurants = []\n",
     "    for _, row in nearest_restaurants.iterrows():\n",
     "        distance = calculate_distance(\n",
@@ -308,22 +349,22 @@
     "\n",
     "    return pd.DataFrame(filtered_restaurants)\n",
     "\n",
-    "# Example usage\n",
-    "user_latitude = 40.421485858821995  # User's latitude (example: Madrid)\n",
-    "user_longitude = -3.692703467811498  # User's longitude (example: Madrid)\n",
-    "radius = 0.8  # Radius in kilometers (800 meters)\n",
-    "k = 10 # Number of nearest restaurants to retrieve\n",
+    "#Entradas\n",
+    "user_latitude = 40.421485858821995 #thebridge\n",
+    "user_longitude = -3.692703467811498  #thebridge\n",
+    "radius = 0.8  #radio en kilometros\n",
+    "k = 10 #retorno de cantidad de restaurantes por busqueda\n",
     "\n",
     "nearby_restaurants = filter_restaurants(user_latitude, user_longitude, radius, k)\n",
     "\n",
-    "# Print the nearby restaurants\n",
+    "#imprime los restaurantes cercanos\n",
     "for _, row in nearby_restaurants.iterrows():\n",
     "    print(f\"Restaurant: {row['name']} (Latitude: {row['latitude']}, Longitude: {row['longitude']})\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +581,7 @@
        "924    €€  Salamanca  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +625,7 @@
        "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
        "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
        "            &lt;style&gt;\n",
-       "                #map_22d5ac30ec1664002d0a3a2ec33a52b5 {\n",
+       "                #map_6bcd99c31761be82b24b1b1dc41e9598 {\n",
        "                    position: relative;\n",
        "                    width: 100.0%;\n",
        "                    height: 100.0%;\n",
@@ -598,14 +639,14 @@
        "&lt;body&gt;\n",
        "    \n",
        "    \n",
-       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_22d5ac30ec1664002d0a3a2ec33a52b5&quot; &gt;&lt;/div&gt;\n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_6bcd99c31761be82b24b1b1dc41e9598&quot; &gt;&lt;/div&gt;\n",
        "        \n",
        "&lt;/body&gt;\n",
        "&lt;script&gt;\n",
        "    \n",
        "    \n",
-       "            var map_22d5ac30ec1664002d0a3a2ec33a52b5 = L.map(\n",
-       "                &quot;map_22d5ac30ec1664002d0a3a2ec33a52b5&quot;,\n",
+       "            var map_6bcd99c31761be82b24b1b1dc41e9598 = L.map(\n",
+       "                &quot;map_6bcd99c31761be82b24b1b1dc41e9598&quot;,\n",
        "                {\n",
        "                    center: [40.427919, -3.680877],\n",
        "                    crs: L.CRS.EPSG3857,\n",
@@ -619,19 +660,19 @@
        "\n",
        "        \n",
        "    \n",
-       "            var tile_layer_39f28997c7abc5e95291f71eda6577c3 = L.tileLayer(\n",
+       "            var tile_layer_2f4cb69cde60fb8651f3f2952be28165 = L.tileLayer(\n",
        "                &quot;https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
        "                {&quot;attribution&quot;: &quot;Data by \\u0026copy; \\u003ca target=\\&quot;_blank\\&quot; href=\\&quot;http://openstreetmap.org\\&quot;\\u003eOpenStreetMap\\u003c/a\\u003e, under \\u003ca target=\\&quot;_blank\\&quot; href=\\&quot;http://www.openstreetmap.org/copyright\\&quot;\\u003eODbL\\u003c/a\\u003e.&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 18, &quot;maxZoom&quot;: 18, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
-       "            ).addTo(map_22d5ac30ec1664002d0a3a2ec33a52b5);\n",
+       "            ).addTo(map_6bcd99c31761be82b24b1b1dc41e9598);\n",
        "        \n",
        "    \n",
-       "            var marker_0cb4b29c14947c46dcfcf9ee5112e54b = L.marker(\n",
+       "            var marker_745ea2ff978edde35b693e3565e01326 = L.marker(\n",
        "                [40.42223, -3.69233],\n",
        "                {}\n",
-       "            ).addTo(map_22d5ac30ec1664002d0a3a2ec33a52b5);\n",
+       "            ).addTo(map_6bcd99c31761be82b24b1b1dc41e9598);\n",
        "        \n",
        "    \n",
-       "            marker_0cb4b29c14947c46dcfcf9ee5112e54b.bindTooltip(\n",
+       "            marker_745ea2ff978edde35b693e3565e01326.bindTooltip(\n",
        "                `&lt;div&gt;\n",
        "                     click\n",
        "                 &lt;/div&gt;`,\n",
@@ -639,13 +680,13 @@
        "            );\n",
        "        \n",
        "    \n",
-       "            var marker_73d7ea6980d9c7c8fede3eeae907a29a = L.marker(\n",
+       "            var marker_68ccfeda365177bbe7365dfc5c7b757b = L.marker(\n",
        "                [40.42195, -3.69347],\n",
        "                {}\n",
-       "            ).addTo(map_22d5ac30ec1664002d0a3a2ec33a52b5);\n",
+       "            ).addTo(map_6bcd99c31761be82b24b1b1dc41e9598);\n",
        "        \n",
        "    \n",
-       "            marker_73d7ea6980d9c7c8fede3eeae907a29a.bindTooltip(\n",
+       "            marker_68ccfeda365177bbe7365dfc5c7b757b.bindTooltip(\n",
        "                `&lt;div&gt;\n",
        "                     click\n",
        "                 &lt;/div&gt;`,\n",
@@ -653,13 +694,13 @@
        "            );\n",
        "        \n",
        "    \n",
-       "            var marker_1254a6d771ce65396e262455cbd59b6e = L.marker(\n",
+       "            var marker_5cc6c2c7d5a11b0a08a22378a2a819e7 = L.marker(\n",
        "                [40.42239, -3.69263],\n",
        "                {}\n",
-       "            ).addTo(map_22d5ac30ec1664002d0a3a2ec33a52b5);\n",
+       "            ).addTo(map_6bcd99c31761be82b24b1b1dc41e9598);\n",
        "        \n",
        "    \n",
-       "            marker_1254a6d771ce65396e262455cbd59b6e.bindTooltip(\n",
+       "            marker_5cc6c2c7d5a11b0a08a22378a2a819e7.bindTooltip(\n",
        "                `&lt;div&gt;\n",
        "                     click\n",
        "                 &lt;/div&gt;`,\n",
@@ -667,13 +708,13 @@
        "            );\n",
        "        \n",
        "    \n",
-       "            var marker_57deaecba8718ebd81d7d5a338932468 = L.marker(\n",
+       "            var marker_e68cc7770a92be9e74e058bb94621380 = L.marker(\n",
        "                [40.4219775, -3.6943897],\n",
        "                {}\n",
-       "            ).addTo(map_22d5ac30ec1664002d0a3a2ec33a52b5);\n",
+       "            ).addTo(map_6bcd99c31761be82b24b1b1dc41e9598);\n",
        "        \n",
        "    \n",
-       "            marker_57deaecba8718ebd81d7d5a338932468.bindTooltip(\n",
+       "            marker_e68cc7770a92be9e74e058bb94621380.bindTooltip(\n",
        "                `&lt;div&gt;\n",
        "                     click\n",
        "                 &lt;/div&gt;`,\n",
@@ -681,13 +722,13 @@
        "            );\n",
        "        \n",
        "    \n",
-       "            var marker_fc71768c8b580c08fa750369168299a6 = L.marker(\n",
+       "            var marker_6d08b1a668f39009393bd1993184cc07 = L.marker(\n",
        "                [40.4230906, -3.6934631],\n",
        "                {}\n",
-       "            ).addTo(map_22d5ac30ec1664002d0a3a2ec33a52b5);\n",
+       "            ).addTo(map_6bcd99c31761be82b24b1b1dc41e9598);\n",
        "        \n",
        "    \n",
-       "            marker_fc71768c8b580c08fa750369168299a6.bindTooltip(\n",
+       "            marker_6d08b1a668f39009393bd1993184cc07.bindTooltip(\n",
        "                `&lt;div&gt;\n",
        "                     click\n",
        "                 &lt;/div&gt;`,\n",
@@ -695,13 +736,13 @@
        "            );\n",
        "        \n",
        "    \n",
-       "            var marker_a1ecce886fe285aa1a01ac4987eaf309 = L.marker(\n",
+       "            var marker_e764fd10ac94ecb0db70ccf6c5de6943 = L.marker(\n",
        "                [40.42336, -3.69274],\n",
        "                {}\n",
-       "            ).addTo(map_22d5ac30ec1664002d0a3a2ec33a52b5);\n",
+       "            ).addTo(map_6bcd99c31761be82b24b1b1dc41e9598);\n",
        "        \n",
        "    \n",
-       "            marker_a1ecce886fe285aa1a01ac4987eaf309.bindTooltip(\n",
+       "            marker_e764fd10ac94ecb0db70ccf6c5de6943.bindTooltip(\n",
        "                `&lt;div&gt;\n",
        "                     click\n",
        "                 &lt;/div&gt;`,\n",
@@ -709,13 +750,13 @@
        "            );\n",
        "        \n",
        "    \n",
-       "            var marker_6c4a9014797aa1e268c7dee0e541065a = L.marker(\n",
+       "            var marker_2b1c6882921ca5afd91faa894e07b9b2 = L.marker(\n",
        "                [40.4221, -3.69082],\n",
        "                {}\n",
-       "            ).addTo(map_22d5ac30ec1664002d0a3a2ec33a52b5);\n",
+       "            ).addTo(map_6bcd99c31761be82b24b1b1dc41e9598);\n",
        "        \n",
        "    \n",
-       "            marker_6c4a9014797aa1e268c7dee0e541065a.bindTooltip(\n",
+       "            marker_2b1c6882921ca5afd91faa894e07b9b2.bindTooltip(\n",
        "                `&lt;div&gt;\n",
        "                     click\n",
        "                 &lt;/div&gt;`,\n",
@@ -723,13 +764,13 @@
        "            );\n",
        "        \n",
        "    \n",
-       "            var marker_2339c180e1b674aa45adcb2660a9db9a = L.marker(\n",
+       "            var marker_80e1528ce27f783dae8e5028ff616ef1 = L.marker(\n",
        "                [40.4221999, -3.69071],\n",
        "                {}\n",
-       "            ).addTo(map_22d5ac30ec1664002d0a3a2ec33a52b5);\n",
+       "            ).addTo(map_6bcd99c31761be82b24b1b1dc41e9598);\n",
        "        \n",
        "    \n",
-       "            marker_2339c180e1b674aa45adcb2660a9db9a.bindTooltip(\n",
+       "            marker_80e1528ce27f783dae8e5028ff616ef1.bindTooltip(\n",
        "                `&lt;div&gt;\n",
        "                     click\n",
        "                 &lt;/div&gt;`,\n",
@@ -737,13 +778,13 @@
        "            );\n",
        "        \n",
        "    \n",
-       "            var marker_8602ab1d0a8cad17c64eaceea3bc8ca2 = L.marker(\n",
+       "            var marker_db071a35132bf66ecba44d85dab73cae = L.marker(\n",
        "                [40.4197818887255, -3.6912852153182],\n",
        "                {}\n",
-       "            ).addTo(map_22d5ac30ec1664002d0a3a2ec33a52b5);\n",
+       "            ).addTo(map_6bcd99c31761be82b24b1b1dc41e9598);\n",
        "        \n",
        "    \n",
-       "            marker_8602ab1d0a8cad17c64eaceea3bc8ca2.bindTooltip(\n",
+       "            marker_db071a35132bf66ecba44d85dab73cae.bindTooltip(\n",
        "                `&lt;div&gt;\n",
        "                     click\n",
        "                 &lt;/div&gt;`,\n",
@@ -751,13 +792,13 @@
        "            );\n",
        "        \n",
        "    \n",
-       "            var marker_d340dac98fd68d1cfd3c383d4aeb753e = L.marker(\n",
+       "            var marker_6337dc50a77792b27d6797614c653f15 = L.marker(\n",
        "                [40.4221517, -3.690545],\n",
        "                {}\n",
-       "            ).addTo(map_22d5ac30ec1664002d0a3a2ec33a52b5);\n",
+       "            ).addTo(map_6bcd99c31761be82b24b1b1dc41e9598);\n",
        "        \n",
        "    \n",
-       "            marker_d340dac98fd68d1cfd3c383d4aeb753e.bindTooltip(\n",
+       "            marker_6337dc50a77792b27d6797614c653f15.bindTooltip(\n",
        "                `&lt;div&gt;\n",
        "                     click\n",
        "                 &lt;/div&gt;`,\n",
@@ -768,10 +809,10 @@
        "&lt;/html&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
       ],
       "text/plain": [
-       "<folium.folium.Map at 0x7ff2618d0a90>"
+       "<folium.folium.Map at 0x7fd8bce82530>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
