--- a/Notebooks/Recomendador.ipynb
+++ b/Notebooks/Recomendador.ipynb
@@ -20,8 +20,7 @@
     "import scipy\n",
     "import sys\n",
     "import re\n",
-    "#nltk.download() \n",
-    "import nltk\n",
+    "\n",
     "\n",
     "import string\n",
     "from sklearn.feature_extraction.text import CountVectorizer, TfidfTransformer"
@@ -29,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,16 +57,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset=dataset.drop([\"id\",'image_url','is_closed','review_count','display_phone','location'], axis=1)"
+    "dataset=dataset.drop(['image_url','is_closed','review_count','display_phone','location'], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +188,7 @@
        "1  donde-da-la-vuelta-el-viento-madrid  40.406190  -3.701441     €  Arganzuela  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +289,7 @@
        "1     €  Tapas Bars Spanish Modern European  Great plac...  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,6 +312,46 @@
    "metadata": {},
    "source": [
     "Lo primero separamos el texto en palabras\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    [spanish, asturian, tapas, bars, are, here, fo...\n",
+       "1    [tapas, bars, spanish, modern, european, great...\n",
+       "2    [asturian, tapas, bars, the, size, everything,...\n",
+       "3    [tapas, bars, tapas/small, plates, beer, bar, ...\n",
+       "4    [spanish, mediterranean, tapas/small, plates, ...\n",
+       "5    [indian, south, asian, cuisine, bangladesh, in...\n",
+       "6    [spanish, tapas/small, plates, stayed, marriot...\n",
+       "7    [thai, legit, thai, food, from, (, thai, ), ju...\n",
+       "8    [chinese, asian, fusion, would, definitely, re...\n",
+       "9    [social, clubs, coffee, &, tea, former, tobacc...\n",
+       "Name: Descripcion_tok, dtype: object"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Tokenization\n",
+    "dataset['Descripcion_tok'] = dataset['combinacion'].apply(lambda x: Utilities.tokenizacion(x)) \n",
+    "dataset['Descripcion_tok'].head(10)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ahora eliminamos palabras que aportan poco significado: articulos, preposiciones."
    ]
   },
   {
@@ -342,46 +381,6 @@
     }
    ],
    "source": [
-    "#Tokenization\n",
-    "dataset['Descripcion_tok'] = dataset['combinacion'].apply(lambda x: Utilities.tokenizacion(x)) \n",
-    "dataset['Descripcion_tok'].head(10)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Ahora eliminamos palabras que aportan poco significado: articulos, preposiciones."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0    [spanish, asturian, tapas, bars, are, here, fo...\n",
-       "1    [tapas, bars, spanish, modern, european, great...\n",
-       "2    [asturian, tapas, bars, the, size, everything,...\n",
-       "3    [tapas, bars, tapas/small, plates, beer, bar, ...\n",
-       "4    [spanish, mediterranean, tapas/small, plates, ...\n",
-       "5    [indian, south, asian, cuisine, bangladesh, in...\n",
-       "6    [spanish, tapas/small, plates, stayed, marriot...\n",
-       "7    [thai, legit, thai, food, from, (, thai, ), ju...\n",
-       "8    [chinese, asian, fusion, would, definitely, re...\n",
-       "9    [social, clubs, coffee, &, tea, former, tobacc...\n",
-       "Name: Descripcion_tok, dtype: object"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "dataset['Descripcion_tok'] = dataset['Descripcion_tok'].apply(lambda x:Utilities.removeStopwords(x)) \n",
     "dataset['Descripcion_tok'].head(10)"
    ]
@@ -396,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +414,7 @@
        "Name: Descripcion_tok, dtype: object"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +454,7 @@
        "Name: Descripcion_clean, dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +485,7 @@
        "\twith 24284 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -874,7 +873,7 @@
        "[958 rows x 4442 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -889,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +907,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -930,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -940,7 +939,7 @@
        "\twith 24284 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -962,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -981,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1406,7 +1405,7 @@
        "[958 rows x 958 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1418,14 +1417,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "restaurante: Asador Nuevo Porche\n",
+      "restaurante: Taberna La Carmencita\n",
       "\n",
       " Los restaurantes más similares son:\n"
      ]
@@ -1433,27 +1432,28 @@
     {
      "data": {
       "text/plain": [
-       "Korgui                         0.239515\n",
-       "Cazorla                        0.228066\n",
-       "A' Fenestella                  0.226274\n",
-       "La Chalana                     0.222133\n",
-       "La General                     0.209880\n",
-       "Alcaravea                      0.203247\n",
-       "Kathmandu Tandoori House       0.201831\n",
-       "Sushi & Buey                   0.200475\n",
-       "El Anciano Rey de los Vinos    0.200371\n",
-       "El Pimiento Verde              0.199626\n",
-       "Name: Asador Nuevo Porche, dtype: float64"
+       "O'Grelo                 0.209827\n",
+       "La Primera              0.197549\n",
+       "Il Tavolo Verde         0.195013\n",
+       "Il Regno di Napoli      0.193441\n",
+       "La Mordida              0.190273\n",
+       "Álbora                  0.190134\n",
+       "Arzábal                 0.188759\n",
+       "García de la Navarra    0.187823\n",
+       "La Maruca               0.186659\n",
+       "Ultramarinos Quintín    0.186509\n",
+       "Name: Taberna La Carmencita, dtype: float64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "Top = 10\n",
-    "Num_restaurante = 55\n",
+    "nombre_restaurante=\"Taberna La Carmencita\"\n",
+    "Num_restaurante = SimilDF.index.get_loc(nombre_restaurante)\n",
     "print('restaurante:',SimilDF.columns[Num_restaurante])\n",
     "RecomendacionItemItem = SimilDF.iloc[(-SimilDF.iloc[:, Num_restaurante]).argsort()[1:(Top+1)].values, Num_restaurante] \n",
     "print ('\\n Los restaurantes más similares son:')\n",
@@ -1462,7 +1462,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Series' object has no attribute 'type'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_21304\\1428940074.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mRecomendacionItemItem\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mc:\\Users\\ricardo\\AppData\\Local\\Programs\\Python\\Python37\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   5485\u001b[0m         ):\n\u001b[0;32m   5486\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 5487\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   5488\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5489\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m->\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Series' object has no attribute 'type'"
+     ]
+    }
+   ],
+   "source": [
+    "RecomendacionItemItem.type()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1473,9 +1495,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'dfDistritoX' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_21304\\3621553916.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mmap_madrid\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfolium\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mMap\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlocation\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m40.427919\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m3.680877\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mzoom_start\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m14\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrow\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdfDistritoX\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0miterrows\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m     folium.Marker(location = [row.loc[\"latitude\"], row.loc[\"longitude\"]],\n\u001b[0;32m      5\u001b[0m     \u001b[1;31m#popup = row.loc[\"rotulo\"] + \" \" + row[\"desc_distrito_local\"],\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'dfDistritoX' is not defined"
+     ]
+    }
+   ],
    "source": [
     "map_madrid = folium.Map(location=[40.427919,-3.680877], zoom_start=14)\n",
     "\n",
