--- a/Notebooks/EDA.ipynb
+++ b/Notebooks/EDA.ipynb
@@ -66,7 +66,7 @@
     "('../data/puentevallecas.csv', 'Puente_de_Vallecas'),  # Puente de Vallecas  \n",
     "('../data/vicalvaro.csv', 'Vicalvaro'),                # Vicalvaro  \n",
     "('../data/villaverde.csv', 'Villaverde'),              # Villaverde \n",
-    "('../data/villavallecas.csv', 'Villa_de_Vallecas'),    # Villaverde de vallecas  \n",
+    "('../data/villavallecas.csv', 'Villa_de_Vallecas'),    # Villa de vallecas  \n",
     "]\n",
     "\n",
     "df_comercios = LoadSetCSV(lista_distritos)"
