--- a/Notebooks/Recomendador.ipynb
+++ b/Notebooks/Recomendador.ipynb
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -874,7 +874,7 @@
        "[958 rows x 4442 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -883,13 +883,13 @@
     "# Visualizacion matriz de Frecuencias\n",
     "\n",
     "X = pd.DataFrame(data=MatrizFrecuencias.toarray(), index= dataset['id'].values,\n",
-    "                columns=vectorizer.get_feature_names_out())\n",
+    "                columns=vectorizer.get_feature_names())\n",
     "X"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +908,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -940,7 +940,7 @@
        "\twith 24284 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -962,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -981,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1432,7 +1432,7 @@
        "[958 rows x 958 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1444,7 +1444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1472,7 +1472,7 @@
        "Name: i_0Icrf_U4tRuyC2zDki_A, dtype: float64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1489,7 +1489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1500,7 +1500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1510,7 +1510,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_21304\\3621553916.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mmap_madrid\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfolium\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mMap\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlocation\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m40.427919\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m3.680877\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mzoom_start\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m14\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrow\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdfDistritoX\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0miterrows\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m     folium.Marker(location = [row.loc[\"latitude\"], row.loc[\"longitude\"]],\n\u001b[0;32m      5\u001b[0m     \u001b[1;31m#popup = row.loc[\"rotulo\"] + \" \" + row[\"desc_distrito_local\"],\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "Cell \u001b[1;32mIn[29], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m map_madrid \u001b[39m=\u001b[39m folium\u001b[39m.\u001b[39mMap(location\u001b[39m=\u001b[39m[\u001b[39m40.427919\u001b[39m,\u001b[39m-\u001b[39m\u001b[39m3.680877\u001b[39m], zoom_start\u001b[39m=\u001b[39m\u001b[39m14\u001b[39m)\n\u001b[1;32m----> 3\u001b[0m \u001b[39mfor\u001b[39;00m (index, row) \u001b[39min\u001b[39;00m dfDistritoX\u001b[39m.\u001b[39miterrows():\n\u001b[0;32m      4\u001b[0m     folium\u001b[39m.\u001b[39mMarker(location \u001b[39m=\u001b[39m [row\u001b[39m.\u001b[39mloc[\u001b[39m\"\u001b[39m\u001b[39mlatitude\u001b[39m\u001b[39m\"\u001b[39m], row\u001b[39m.\u001b[39mloc[\u001b[39m\"\u001b[39m\u001b[39mlongitude\u001b[39m\u001b[39m\"\u001b[39m]],\n\u001b[0;32m      5\u001b[0m     \u001b[39m#popup = row.loc[\"rotulo\"] + \" \" + row[\"desc_distrito_local\"],\u001b[39;00m\n\u001b[0;32m      6\u001b[0m     tooltip \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mclick\u001b[39m\u001b[39m\"\u001b[39m)\u001b[39m.\u001b[39madd_to(map_madrid)\n\u001b[0;32m      8\u001b[0m map_madrid\n",
       "\u001b[1;31mNameError\u001b[0m: name 'dfDistritoX' is not defined"
      ]
     }
@@ -1550,7 +1550,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.2"
   },
   "orig_nbformat": 4
  },
